--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Nikunj Vankar(21BCP127)
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer from PDEU
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
